cleaning up css and fixing bugs on tablet and mobile

--- a/src/components/howitworks/dataview/DataView.css
+++ b/src/components/howitworks/dataview/DataView.css
@@ -86,8 +86,6 @@
   align-self: flex-start
 }
 
-
-
 .header-body-button-activated {
   font-weight: 600;
   color: var(--rum)
@@ -100,6 +98,7 @@
 /**
  * Adjustements on the padding on the stored containters
  */
+
 .dataview .prismview {
   margin-bottom: 20px
 }
@@ -127,9 +126,11 @@
   }
 
    .dataview-utility-bar {
-     display: flex;
-     justify-content: space-between;
-     width: 100%
+     justify-content: flex-start;
+  }
+
+  .copy-button {
+    align-items:flex-end
   }
 
   .header-body-button {
@@ -139,31 +140,38 @@
 
 @media (max-width: 812px) {
   .dataview-utility-bar {
-    display: flex;
     justify-content: flex-start;
     width: 100%;
     padding: 0 3rem 0 1rem
   }
+
   .dataview-title {
     font-family: Vipps;
     font-size: 10px;
     color: var(--ghost);
     padding: 4rem 2rem 2rem 4rem;
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 5px 5px 0px 0px
+  }
+
+  .prisview,
+  .dataview-title {
     word-break: break-all;
     -ms-word-break: break-all;
     -webkit-word-break: break-all
   }
 
+  .prismview-1,
+  .prismview-2 {
+    padding: 0
+  }
+
   .prismview-1 {
-    padding: 0;
     margin: 0
   }
   
   .prismview-2 {
-    margin-left: 0!important;
-    padding: 0
-  }
+    margin-left: 0!important
+  } 
 
   .header-body-button {
     height: 10px;
@@ -173,12 +181,7 @@
   .copy-button {
     display: none
   }
-
-  .prisview {
-    word-break: break-all;
-    -ms-word-break: break-all
-  }
-
+  
   .dataview .responsetable {
     margin: 1rem 3rem 2rem 3rem
   }
