--- a/src/components/howitworks/responses/ResponseBox.css
+++ b/src/components/howitworks/responses/ResponseBox.css
@@ -23,20 +23,6 @@
   outline: none;
 }
 
-@media (max-width:812px) {
-  .response-button-collapsible,
-  .response-displayer-collapsible {
-    padding: 1rem .8rem 1rem 1.2rem;
-  }
-}
-
-@media (min-width:768px) and (max-width:1100px) {
-  .response-button-collapsible,
-  .response-displayer-collapsible {
-    
-  }
-}
-
 .response-button-collapsible {
   cursor: pointer;
 }
@@ -71,4 +57,16 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+
+@media (max-width:812px) {
+  .response-button-collapsible,
+  .response-displayer-collapsible {
+    padding: 1rem .8rem 1rem 1.2rem;
+  }
+}
+
+@media (min-width:768px) and (max-width:1100px) {
+
 }
